tests/baselines/reference/assignmentCompatWithObjectMembers5.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts(13,1): error TS2737: Property 'foo' is missing in type 'I' but present in type 'C'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts(14,1): error TS2737: Property 'fooo' is missing in type 'C' but present in type 'I'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers5.ts (2 errors) ====
    class C {
        foo: string;
    }
    
    var c: C;
    
    interface I {
        fooo: string;
    }
    
    var i: I;
    
    c = i; // error
    ~
!!! error TS2737: Property 'foo' is missing in type 'I' but present in type 'C'.
    i = c; // error
    ~
!!! error TS2737: Property 'fooo' is missing in type 'C' but present in type 'I'.